api98 part2
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>